# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimic-da"
version = "0.0.9"
description = ""
readme = "README.md"
authors = [{ name = "Oshrit Shtossel, Shani FInkelstein", email = "oshritvig@gmail.com"}]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Diffrential analysis", "cladogram", "Mann-Whitney", "microbiome"]
dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scipy>=1.11.0",
    "networkx>=2.5.1",
    "matplotlib",
    "samba-metric>=0.0.10",
    "MIPMLP>=1.2.17",
    "pyqt5==5.15.10",
    "ete3==3.1.3",
    "statsmodels>=0.14.0"
]
requires-python = ">=3.7"