# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimic-da"
version = "0.0.15"
description = ""
readme = "README.md"
authors = [{ name = "Oshrit Shtossel, Shani Finkelstein", email = "oshritvig@gmail.com"}]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Diffrential analysis", "cladogram", "Mann-Whitney", "microbiome"]
dependencies = [
    "samba-metric>=0.0.13",
    "MIPMLP>=1.2.17",
    "pyqt5==5.15.10",
    "ete3==3.1.3",
    "statsmodels>=0.14.0"
]
requires-python = ">=3.8"
